media query fixed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta charset="UTF-8">
     <title>harshit.agarwal</title>
     <link rel="stylesheet" href="main.css"/>
