--- a/index.html
+++ b/index.html
@@ -124,6 +124,20 @@
         {
             nav.classList.toggle('hide-mobile')
         }); 
+        let pro1 = document.getElementById('getPro1');
+        pro1.addEventListener('click', function(){
+            window.location.href = "https://github.com/aharshit123456/Project_Chisel";
+        });
+        
+        let pro2 = document.getElementById('getPro2');
+        pro2.addEventListener('click', function(){
+            window.location.href = "https://github.com/aharshit123456/Learning_Python";
+        }); 
+        
+        let pro3 = document.getElementById('getPro3');
+        pro3.addEventListener('click', function(){
+            window.location.href = "https://github.com/aharshit123456/Shotes";
+        });  
     </script>
 </body>
 </html>
