Graphic Design page added
Signed-off-by: DELL <aharshit123456@gmail.com>

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                             <li><a href="#hero-bg"> Home </a></li>
                             <li><a href="#projects-bg"> Projects </a></li>
                             <li><a href="#skills-bg"> Skills </a></li>
+                            <li><a href="graphic.html"> Graphic Design </a></li>
                             <li><a href="#footer"> Contacts </a></li>
+                        
                       </ul>
                     </nav>
             </header>
@@ -29,7 +31,7 @@
             <div class="mainintro">
                 <span class="intro">
                        <p>
-                        A 16 year old who loves to learn, anything from Graphic Designing to Software Developement to Physics and Researching.
+                           A 16 year old who loves to learn, anything from <a href="graphic.html">Graphic Designing </a> to Software Developement to Physics and Researching.
                     </p>
                     <p>   
                         This Site is dedicated to his Journey in Software Developement and accompanies.
