feat: Improve SEO by adding a sitemap, updating robots.txt, and enhancing `index.html` with comprehensive meta tags.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harshit Agarwal // Portfolio v2</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Harshit Agarwal | Fullstack Developer & AI Researcher</title>
+    <meta name="title" content="Harshit Agarwal | Fullstack Developer & AI Researcher">
+    <meta name="description"
+        content="Harshit Agarwal is a Fullstack Developer and AI Researcher. Founding SDE at shoppin', Research Lead at Alohomora Labs. Expert in Python, React, AI/ML, and Distributed Systems. based in India.">
+    <meta name="keywords"
+        content="Harshit Agarwal, Harshit Agarwal KIIT, software engineer, AI researcher, fullstack developer, deep learning, computer vision, shoppin, Alohomora Labs, portfolio">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+    <meta name="author" content="Harshit Agarwal">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://aharshit123456.github.io/">
+    <meta property="og:title" content="Harshit Agarwal | Fullstack Developer & AI Researcher">
+    <meta property="og:description"
+        content="Harshit Agarwal is a Fullstack Developer and AI Researcher. Founding SDE at shoppin', Research Lead at Alohomora Labs. Expert in Python, React, AI/ML.">
+    <meta property="og:image" content="https://aharshit123456.github.io/profile_new.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://aharshit123456.github.io/">
+    <meta property="twitter:title" content="Harshit Agarwal | Fullstack Developer & AI Researcher">
+    <meta property="twitter:description"
+        content="Harshit Agarwal is a Fullstack Developer and AI Researcher. Founding SDE at shoppin', Research Lead at Alohomora Labs.">
+    <meta property="twitter:image" content="https://aharshit123456.github.io/profile_new.jpg">
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Harshit Agarwal",
+      "url": "https://aharshit123456.github.io",
+      "image": "https://aharshit123456.github.io/profile_new.jpg",
+      "sameAs": [
+        "https://www.linkedin.com/in/aharshit123456/",
+        "https://github.com/aharshit123456"
+      ],
+      "jobTitle": "Fullstack Developer & Researcher",
+      "worksFor": [
+        {
+            "@type": "Organization",
+            "name": "Alohomora Labs"
+        },
+        {
+            "@type": "Organization",
+            "name": "shoppin'"
+        }
+      ],
+      "alumniOf": {
+        "@type": "CollegeOrUniversity",
+        "name": "KIIT University"
+      },
+      "knowsAbout": ["Fullstack Development", "Artificial Intelligence", "Machine Learning", "Distributed Systems", "Python", "React"]
+    }
+    </script>
+
+    <link rel="canonical" href="https://aharshit123456.github.io/" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -52,6 +111,10 @@
                         <span class="label">//linkedin</span>
                         <a href="https://www.linkedin.com/in/aharshit123456/" target="_blank"
                             class="link">linkedin.com/in/aharshit123456</a>
+                    </div>
+                    <div class="nav-item">
+                        <span class="label">//archive</span>
+                        <a href="index_v1.html" class="link">v1.0 (Old Version)</a>
                     </div>
                 </header>
 
