feat: add Way Through Films project section with interactive production modals.

--- a/index.html
+++ b/index.html
@@ -559,6 +559,28 @@
                                 <li>Managed tech and community operations for large scale events.</li>
                             </ul>
                         </div>
+
+
+                        <div class="project-card">
+                            <div class="project-header">
+                                <h4>Way Through Films</h4>
+                                <span class="role">//Founder</span>
+                            </div>
+                            <ul>
+                                <li><strong>Production House:</strong> Established an independent production studio.
+                                </li>
+                                <li><strong>Docu Series:</strong> <a href="#"
+                                        onclick="openProductionTab('omwt'); return false;"
+                                        style="color: var(--accent-color);">On My Way Through</a> - A docuseries
+                                    exploring society through an unpolished lens.</li>
+                                <li><strong>Micro Experiments:</strong>
+                                    <a href="#" onclick="openProductionTab('pause'); return false;"
+                                        style="color: var(--accent-color);">Pause</a> /
+                                    <a href="#" onclick="openProductionTab('morning'); return false;"
+                                        style="color: var(--accent-color);">Morning</a>
+                                </li>
+                            </ul>
+                        </div>
                     </section>
 
                     <hr class="divider">
