feat: Update profile picture from `anime.png` to `me.png`.

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                         draggable="false">
                                 </div>
                                 <div class="back">
-                                    <img src="anime.png" alt="Anime Avatar" class="profile-pic" draggable="false">
+                                    <img src="me.png" alt="Me IRL" class="profile-pic" draggable="false">
                                 </div>
                             </div>
                         </div>
