feat: enhance mobile responsiveness, update portfolio content, and refine dark mode toggle.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="dark-mode">
     <div class="mac-window">
         <div class="title-bar">
             <div class="buttons">
@@ -79,7 +79,7 @@
             </div>
             <div class="window-title">harshit_agarwal.exe</div>
             <div class="theme-toggle" title="Toggle Dark Mode">
-                <i class="fas fa-moon"></i>
+                <i class="fas fa-sun"></i>
             </div>
         </div>
 
@@ -134,7 +134,8 @@
                         <div class="hero-text">
                             <h1>&lt;Harshit Agarwal&gt;</h1>
                             <h2>// Fullstack Developer & Researcher</h2>
-                            <p class="tagline">"Hard work betrays none, but dreams betray many." - Genji Kamogawa</p>
+                            <p class="tagline">"Not everyone who works hard is rewarded, but all those who succeed have
+                                worked hard." - Genji Kamogawa</p>
                             <div class="hero-links">
                                 <a href="#about">//about</a>
                                 <a href="#experience">//experience</a>
@@ -589,7 +590,7 @@
                         <h3>//hobbies (interactive)</h3>
                         <div class="hobbies-grid">
                             <button class="hobby-btn"
-                                onclick="openTab('guitar', 'Guitar', '<h3>Guitar</h3><p>Played in rock band performances. I love creating distorted riffs and melodic solos.</p>')">
+                                onclick="openTab('guitar', 'Guitar', '<h3>Guitar</h3><p>Played in rock band performances. I love creating distorted riffs and melodic solos.</p><p><strong>Band Experience:</strong> Member of school band <em>&quot;528hz&quot;</em>.</p>')">
                                 <i class="fas fa-guitar"></i> Guitar
                             </button>
                             <button class="hobby-btn"
@@ -597,7 +598,7 @@
                                 <i class="fas fa-palette"></i> Artwork
                             </button>
                             <button class="hobby-btn"
-                                onclick="openTab('philosophy', 'Philosophy', '<h3>Philosophy</h3><p>Skeptic at heart. Interested in Epistemology, Metaphysics. Reading Plato, Nietzsche, Dostoevsky, Camus.</p>')">
+                                onclick="openTab('philosophy', 'Philosophy', '<h3>Philosophy</h3><p>Skeptic at heart. Interested in Epistemology, Metaphysics. Reading Plato, Nietzsche, Dostoevsky, Camus.</p><h4>Reading List:</h4><ul><li>The Brothers Karamazov - Dostoevsky</li><li>Crime and Punishment - Dostoevsky</li><li>Notes from Underground - Dostoevsky</li></ul>')">
                                 <i class="fas fa-book"></i> Philosophy
                             </button>
                             <button class="hobby-btn"
@@ -609,7 +610,7 @@
                                 <i class="fas fa-utensils"></i> Cooking
                             </button>
                             <button class="hobby-btn"
-                                onclick="openTab('anime', 'Anime', '<h3>Anime</h3><p>Hajime no Ippo, Steins;Gate, Monster. Stories that move the soul.</p>')">
+                                onclick="openTab('anime', 'Anime', '<h3>Anime</h3><p>Hajime no Ippo, Steins;Gate, Monster. Stories that move the soul.</p><div style=\'width:100%; height:400px; margin-top:10px;\'><iframe src=\'https://myanimelist.net/animelist/aharshit123456\' style=\'width:100%; height:100%; border:none;\'></iframe></div>')">
                                 <i class="fas fa-tv"></i> Anime
                             </button>
                             <button class="hobby-btn"
@@ -617,15 +618,15 @@
                                 <i class="fas fa-music"></i> Dance
                             </button>
                             <button class="hobby-btn"
-                                onclick="openTab('volleyball', 'Volleyball', '<h3>Volleyball</h3><p>Libero / Middle Blocker. It\'s all about the team dynamic and the spike.</p>')">
-                                <i class="fas fa-volleyball-ball"></i> Volleyball
+                                onclick="openTab('sports', 'Sports', '<h3>Sports</h3><p><strong>Volleyball:</strong> Libero / Middle Blocker. It\'s all about the team dynamic and the spike.</p><p><strong>Triathlon Prep:</strong> Swimming (25m lap in ~30s), Track, and Cycling.</p><p><strong>Combat Sports:</strong> Kickboxing (training since July 2025 at IAKO associated gym), Wushu (since Dec 2025).</p><p>Also love playing Football.</p>')">
+                                <i class="fas fa-running"></i> Sports
                             </button>
                             <button class="hobby-btn"
-                                onclick="openTab('cybersec', 'Cyber Security', '<h3>Cyber Security</h3><p>Network Security, Penetration Testing (Metasploit, NMAP, Wireshark). CTF enthusiast.</p>')">
+                                onclick="openTab('cybersec', 'Cyber Security', '<h3>Cyber Security</h3><p>Network Security, Penetration Testing.</p><p><strong>Recommendations:</strong> <a href=\'https://picoctf.org/\' target=\'_blank\'>picoCTF</a>, Learning Maltego & Metasploit basics.</p>')">
                                 <i class="fas fa-user-secret"></i> Cyber Security
                             </button>
                             <button class="hobby-btn"
-                                onclick="openTab('physics', 'Theoretical Physics', '<h3>Theoretical Physics</h3><p>Studied Classical/Quantum Mechanics, Electrodynamics (Susskind\'s Minimum).</p>')">
+                                onclick="openTab('physics', 'Theoretical Physics', '<h3>Theoretical Physics</h3><p>Studied Classical/Quantum Mechanics, Electrodynamics (Susskind\'s Minimum).</p><p><strong>Recommendation:</strong> <a href=\'https://theoreticalminimum.com/courses/classical-mechanics/2011/fall\' target=\'_blank\'>Classical Mechanics (Theoretical Minimum)</a></p>')">
                                 <i class="fas fa-atom"></i> Theoretical Physics
                             </button>
                             <button class="hobby-btn"
