feat: Add profile flip hint UI and periodic display logic.

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                                     <img src="me.png" alt="Me IRL" class="profile-pic" draggable="false">
                                 </div>
                             </div>
+                            <div class="flip-hint">Click to flip</div>
                         </div>
                         <div class="hero-text">
                             <h1>&lt;Harshit Agarwal&gt;</h1>
