feat: Add "PreviouslyOn" project and a new "digital_presence" section with social links and content curations.

--- a/index.html
+++ b/index.html
@@ -284,6 +284,19 @@
 
                         <div class="project-card">
                             <div class="project-header">
+                                <h4>PreviouslyOn <a href="https://github.com/aharshit123456/previouslyon">[GitHub]</a>
+                                    <a href="http://previouslyon.vercel.app/">[Web]</a>
+                                </h4>
+                                <span class="tech-stack">Next.js, Supabase</span>
+                            </div>
+                            <p>"Letterboxd for TV" web application built with Next.js and Supabase, leveraging the TMDB
+                                API for rich data. It features a responsive modern UI for discovering trending series,
+                                managing custom watchlists, and delivering personalized recommendations based on user
+                                preferences.</p>
+                        </div>
+
+                        <div class="project-card">
+                            <div class="project-header">
                                 <h4>gaitSetPy <a href="https://github.com/Alohomora-Labs/gaitSetPy">[GitHub]</a> <a
                                         href="https://www.alohomora-labs.me">[Web]</a></h4>
                                 <span class="tech-stack">Python, C</span>
@@ -634,6 +647,49 @@
                                 onclick="openTab('youtube', 'YouTube', '<h3>YouTube Channel</h3><p>Produced videos on Coding, Maths, Gaming (2017-2019).</p>')">
                                 <i class="fab fa-youtube"></i> YouTube
                             </button>
+                        </div>
+                    </section>
+
+                    <hr class="divider">
+
+                    <section class="curations-section" id="curations">
+                        <h3>//digital_presence (socials & curations)</h3>
+                        <div class="skills-grid">
+                            <div class="skill-category">
+                                <strong><i class="fas fa-list"></i> Curations:</strong><br>
+                                <div style="margin-top: 10px; display: flex; flex-direction: column; gap: 8px;">
+                                    <a href="https://letterboxd.com/aharshit123456/" target="_blank"
+                                        class="blog-link"><i class="fas fa-film"></i> Letterboxd (Movies)</a>
+                                    <a href="https://previouslyon.vercel.app/user/aharshit123456" target="_blank"
+                                        class="blog-link"><i class="fas fa-tv"></i> Previously On (Shows)</a>
+                                    <a href="https://www.goodreads.com/user/show/55541393-harshit-agarwal"
+                                        target="_blank" class="blog-link"><i class="fas fa-book"></i> Goodreads
+                                        (Books)</a>
+                                </div>
+                            </div>
+                            <div class="skill-category">
+                                <strong><i class="fas fa-share-alt"></i> Socials:</strong><br>
+                                <div style="margin-top: 10px; display: flex; flex-direction: column; gap: 8px;">
+                                    <a href="https://instagram.com/aharshit123456" target="_blank" class="blog-link"><i
+                                            class="fab fa-instagram"></i> Instagram</a>
+                                    <a href="https://x.com/aharshit123456" target="_blank" class="blog-link"><i
+                                            class="fab fa-twitter"></i> X / Twitter</a>
+                                    <a href="https://account.xbox.com/en-us/profile?gamertag=aharsht12345"
+                                        target="_blank" class="blog-link"><i class="fab fa-xbox"></i> Xbox
+                                        (aharsht12345)</a>
+                                    <a href="https://www.twitch.tv/aharsh123456" target="_blank" class="blog-link"><i
+                                            class="fab fa-twitch"></i> Twitch</a>
+                                    <a href="https://open.spotify.com/user/aharshit123456" target="_blank"
+                                        class="blog-link"><i class="fab fa-spotify"></i> Spotify</a>
+                                    <div style="margin-top: 10px;">
+                                        <iframe style="border-radius:12px"
+                                            src="https://open.spotify.com/embed/playlist/37i9dQZEVXdjx1ziQCmPxM?utm_source=generator&theme=0"
+                                            width="100%" height="152" frameBorder="0" allowfullscreen=""
+                                            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                                            loading="lazy"></iframe>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </section>
 
