--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     }
     </script>
 
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="canonical" href="https://aharshit123456.github.io/" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
