docs: enhance TV tracking app project description with details on AI integration and advanced SEO strategies.

--- a/index.html
+++ b/index.html
@@ -290,10 +290,11 @@
                                 </h4>
                                 <span class="tech-stack">Next.js, Supabase</span>
                             </div>
-                            <p>"Letterboxd for TV" web application built with Next.js and Supabase, leveraging the TMDB
-                                API for rich data. It features a responsive modern UI for discovering trending series,
-                                managing custom watchlists, and delivering personalized recommendations based on user
-                                preferences.</p>
+                            <p>"Developed a full-stack social TV tracking application using Next.js and Supabase,
+                                featuring real-time user activity feeds, custom list curation, and polymorphic review
+                                systems. Integrated Gemini AI for personalized content recommendations and implemented
+                                advanced SEO strategies including dynamic metadata and structured data (JSON-LD) for
+                                optimal search visibility. (letterboxd for tv)</p>
                         </div>
 
                         <div class="project-card">
