feat: add interactive 'Shoppin' Progression' timeline graph and 'Writings' section.

--- a/index.html
+++ b/index.html
@@ -218,6 +218,13 @@
                                     </li>
                                     <li><strong>Cloud & DevOps</strong>: Architected AWS EKS clusters with GitOps
                                         (Terraform, CI/CD). Enabled disaster recovery setups.</li>
+                                    <!-- Progression Graph Button -->
+                                    <li style="list-style: none; margin-left: -20px; margin-top: 10px;">
+                                        <button onclick="openShoppinStats()" class="hobby-btn"
+                                            style="font-size: 0.8rem; padding: 5px 15px;">
+                                            <i class="fas fa-chart-line"></i> View Progression (Lv. 1 -> Lv. 10)
+                                        </button>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -648,6 +655,10 @@
                             <button class="hobby-btn"
                                 onclick="openTab('youtube', 'YouTube', '<h3>YouTube Channel</h3><p>Produced videos on Coding, Maths, Gaming (2017-2019).</p>')">
                                 <i class="fab fa-youtube"></i> YouTube
+                            </button>
+                            <button class="hobby-btn"
+                                onclick="openTab('writings-tab', 'Writings', '<h3>Articles & Blogs</h3><div class=\'blog-list\'><div class=\'blog-item\'><span class=\'date\'>Medium</span><a href=\'https://medium.com/@periodsocietyodisha/men-and-menstruation-8ddcf213cbd8\' target=\'_blank\' class=\'blog-link\'>Men and Menstruation</a></div><div class=\'blog-item\'><span class=\'date\'>Medium</span><a href=\'https://medium.com/@periodsocietyodisha/impact-of-socioeconomic-status-on-menstruators-37114602dfb5\' target=\'_blank\' class=\'blog-link\'>Impact of Socioeconomic Status on Menstruators</a></div><div class=\'blog-item\'><span class=\'date\'>Medium</span><a href=\'https://medium.com/@periodsocietyodisha/prison-and-menstruation-988aa27f4306\' target=\'_blank\' class=\'blog-link\'>Prison and Menstruation</a></div></div>')">
+                                <i class="fas fa-pen-nib"></i> Writings
                             </button>
                         </div>
                     </section>
