fix: Update PreviouslyOn project and user links to new domain.

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                         <div class="project-card">
                             <div class="project-header">
                                 <h4>PreviouslyOn <a href="https://github.com/aharshit123456/previouslyon">[GitHub]</a>
-                                    <a href="http://previouslyon.vercel.app/">[Web]</a>
+                                    <a href="http://previouslyon.cosq.in/">[Web]</a>
                                 </h4>
                                 <span class="tech-stack">Next.js, Supabase</span>
                             </div>
@@ -673,7 +673,7 @@
                                 <div style="margin-top: 10px; display: flex; flex-direction: column; gap: 8px;">
                                     <a href="https://letterboxd.com/aharshit123456/" target="_blank"
                                         class="blog-link"><i class="fas fa-film"></i> Letterboxd (Movies)</a>
-                                    <a href="https://previouslyon.vercel.app/user/aharshit123456" target="_blank"
+                                    <a href="https://previouslyon.cosq.in/user/aharshit123456" target="_blank"
                                         class="blog-link"><i class="fas fa-tv"></i> Previously On (Shows)</a>
                                     <a href="https://www.goodreads.com/user/show/55541393-harshit-agarwal"
                                         target="_blank" class="blog-link"><i class="fas fa-book"></i> Goodreads
